<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_help"
        android:title="@string/menu_help"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        app:showAsAction="never"/>
</menu>